<resources>
    <string name="app_name">GoSnow</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="facebook_app_id">1705986982996956</string>
    <string name="title_activity_ride_now">RideNowActivity</string>

    <string name="title_skip">SKIP</string>
    <string name="title_finish">FINISH</string>
    <string name="error_connection">Not able to connect to server</string>
    <string name="title_activity_start_up">GoSnow</string>
    <string name="title_activity_options_menu_base">OptionsMenuBaseActivity</string>

    <string name="title_error">Error</string>

    <!-- menu options-->
    <string name="title_ridingnow">RIDING NOW</string>
    <string name="title_connect">CONNECT</string>
    <string name="title_events">EVENTS</string>
    <string name="title_messages">MESSAGES</string>
    <string name="title_snowbuddies">SNOW BUDDIES</string>
    <string name="title_notifictions">NOTIFICATIONS</string>
    <string name="title_settings">SETTINGS</string>

    <string-array name="nav_drawer_items">
        <item>@string/title_ridingnow</item>
        <item>@string/title_connect</item>
        <item>@string/title_events</item>
        <item>@string/title_messages</item>
        <item>@string/title_snowbuddies</item>
        <item>@string/title_notifictions</item>
        <item>@string/title_settings</item>

    </string-array>
    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>

    <!-- Rider level-->
    <string name="title_firsttimer">First Timer</string>
    <string name="title_beginner">Beginner</string>
    <string name="title_intermediate">InterMediate</string>
    <string name="title_advanced">Advanced</string>
    <string name="title_mountainpro">All Mountain Pro</string>

    <string name="title_selectlevel">WHAT LEVEL ARE YOU?</string>

    <!-- Interest types-->
    <string name="title_allterrain">All Terrain</string>
    <string name="title_onpiste">On Piste</string>
    <string name="title_offpiste">Off Piste</string>
    <string name="title_parks">Parks</string>
    <string name="title_apres">Apres</string>

    <string name="title_selectinterest">Likely To Be Found AT</string>
    <string name="title_chooseinterest">Choose Interest</string>


    <!-- next destination-->
    <string name="title_seldestination">WHAT IS YOUR NEXT DESTINATION</string>
    <string name="title_nexttrip1">What is your</string>
    <string name="title_nexttrip2">Next Planned Trip</string>

    <string name="title_activity_connect">ConnectActivity</string>
    <string name="title_activity_events">EventsActivity</string>

    <string name="title_terms1">*We never post anything to facebook</string>
    <string name="title_terms2">By using GoSnow you agree to the</string>
    <string name="title_terms3">Terms and Conditions</string>
    <string name="title_activity_tnc">TNCActivity</string>
    <string name="title_loadingpage">"Loading Page"</string>
    <string name="title_activity_signup_steps">SignupStepsActivity</string>


</resources>
