<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        >
        <TextView
            style="@style/MediumLabelStyle"
            android:textSize="18sp"
            android:text="Interest"
            android:id="@+id/interestid"
            android:textStyle="bold"
          />

        <TextView
            style="@style/MediumLabelStyle"
            android:text="Not Selected"
            android:id="@+id/selinterestid"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="18sp"
            android:layout_marginRight="5dp"/>



    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <RadioGroup
        android:id="@+id/riderinterestgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="15dp"

        >

    <RadioButton
        android:id="@+id/interes1id"
        android:text="@string/title_allterrain"
        style="@style/RadioButtonStyle"
        android:checked="true" />

    <RadioButton
        android:id="@+id/interes2id"
        style="@style/RadioButtonStyle"
        android:text="@string/title_onpiste"
        android:checked="false"
    />

    <RadioButton
        android:id="@+id/interes3id"
        style="@style/RadioButtonStyle"
        android:text="@string/title_offpiste"
        android:checked="false"
        />

    <RadioButton
        android:id="@+id/interes4id"
        style="@style/RadioButtonStyle"
        android:text="@string/title_parks"
        android:checked="false"
        />

    <RadioButton
        android:id="@+id/interes5id"
        style="@style/RadioButtonStyle"
        android:text="@string/title_apres"
        android:checked="false"
        />
    </RadioGroup>
</LinearLayout>
